Update frontend API methods to automatically update the UI instead of refreshing the webpage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
-    // "liveServer.settings.ignoreFiles": [
-    //     ".vscode/**",
-    //     "**/*.scss",
-    //     "**/*.sass",
-    //     "**/*.ts"
-    // ]
+    "liveServer.settings.ignoreFiles": [
+        // website reloads when database file changes, so this lets us see how it would actually work in production.
+        "**/*"
+    ]
 }
