Feat: Implement api unit tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "liveServer.settings.ignoreFiles": [
         // website reloads when database file changes, so this lets us see how it would actually work in production.
         // "**/*"
-    ]
+    ],
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
